# Next-Windows

./: .gitignore  README.md  pyproject.toml  项目地址.url
next_windows/: 任务栏滚动切换应用.py  左上角.py  鼠标所在窗口边框线.py
next_windows/拖动窗口时透明/: wait_for_move_event.py  window_transparency.py
next_windows/窗口区域扩展/: get_all_hwnd.py  move_all.py  taskbar_scroll.py
service/: 任务栏滚动切换应用.pyw  左上角.pyw  鼠标所在窗口边框线.pyw
